--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,17 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/mongodb-odm-bundle": "^5.2",
-        "lexik/jwt-authentication-bundle": "^3.1",
+        "knplabs/knp-paginator-bundle": "^6.6",
+        "lexik/jwt-authentication-bundle": "*",
         "symfony/console": "7.2.*",
         "symfony/dotenv": "7.2.*",
+        "symfony/expression-language": "7.2.*",
         "symfony/flex": "^2",
+        "symfony/form": "7.2.*",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
+        "symfony/validator": "7.2.*",
+        "symfony/web-link": "7.2.*",
         "symfony/yaml": "7.2.*"
     },
     "config": {
