--- a/config/services.yaml
+++ b/config/services.yaml
@@ -21,6 +21,11 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+    App\Repository\:
+        resource: '../src/Repository'
+        autowire: false
+        autoconfigure: false
+        public: false
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
